feat: active 캡슐함 조회 로직 -> recent 캡슐함 조회 로직 으로 변경